--- a/doc/clamsmtpd.8
+++ b/doc/clamsmtpd.8
@@ -146,7 +146,7 @@ performance of the virus filtering will take a hit, perhaps DOS'ing your
 machine under heavy load. Secondly as with running any program there are 
 security implications to be considered. 
 .Pp
-.Please consider the above carefully before implementing a virus action. 
+Please consider the above carefully before implementing a virus action. 
 .Pp
 The script is run without its output being logged, or return value being 
 checked. Because of this you should test it thoroughly. Make sure it runs
